@@ -1,6 +1,7 @@
 11-January-2012 Michael Babker
 ~ Update Live Update to 1.1
 ~ Set filterable states for admin list views
++ [#40] Add filters to Feeds list view
 
 8-January-2012 Michael Babker
 + Add SQLServer support
